<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="48dp">

        <TextView
            android:id="@+id/timer"
            android:layout_width="331dp"
            android:layout_height="67dp"
            android:text="@string/seconds_remaining_label"
            android:textAlignment="center"
            android:textColor="#115B7C"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="399dp"
            android:layout_height="62dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/expression_1"
                android:layout_width="190dp"
                android:layout_height="63dp"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/expression1_label"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/expression_2"
                android:layout_width="190dp"
                android:layout_height="62dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/expression2_label"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="78dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/greater_btn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/greater_btn_label"
                app:backgroundTint="#111F6C" />

            <Button
                android:id="@+id/equal_btn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/equal_label"
                app:backgroundTint="#111F6C" />

            <Button
                android:id="@+id/less_btn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/less_label"
                app:backgroundTint="#111F6C" />
        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="136dp"
            android:layout_height="41dp"
            android:fontFamily="sans-serif"
            android:text="@string/result_label"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>