<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".PopUpWindow">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="116dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="421dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popup_title"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:background="#7EBCD8"
                android:fontFamily="monospace"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/about_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/declaration"
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:background="#D2EDEA"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:inputType="textLongMessage|textMultiLine"
                android:text="@string/description_label"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/student_name"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="#D2EDEA"
                android:gravity="center_vertical"
                android:text="@string/name_label"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/student_id"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:background="#D2EDEA"
                android:text="@string/student_id_label"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:text="@string/ok_label"
                app:backgroundTint="#0E1851" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>