<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultWindow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="108dp">

        <TextView
            android:id="@+id/TimesUp"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/time_s_up"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noOfCorrects"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginLeft="70dp"
            android:fontFamily="sans-serif"
            android:text="@string/correct"
            android:textColor="#1027A3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noOfWrongs"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="70dp"
            android:fontFamily="sans-serif"
            android:text="@string/wrong"
            android:textColor="#1027A3"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>